--- a/src/Component/Experience.css
+++ b/src/Component/Experience.css
@@ -111,3 +111,9 @@
     }
 
 }
+
+@media only screen and (max-width: 375px) {
+    #experience {
+        height: 150vh !important;
+    }
+}
